--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>notification</module>
         <module>clients</module>
         <module>eureka-server</module>
+        <module>apigw</module>
     </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
