--- a/apigw/src/main/resources/application.yml
+++ b/apigw/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: customer
-          uri: lb://CUSTOMER
+        - id: customers
+          uri: lb://CUSTOMERS
           predicates:
             - Path=/api/v1/customers/**
 
