--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
         <module>clients</module>
         <module>eureka-server</module>
         <module>apigw</module>
-    </modules>
+		<module>amqp</module>
+	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
